lift-side meny fix visible

--- a/static/css/main/main.css
+++ b/static/css/main/main.css
@@ -74,7 +74,7 @@ h2, .single_place h1, .article h1, h1.not_found,  .video h3,
     color: #1d3e22;
 }
 .left-side .hided_buton_show_menu {
-  display: none;
+  display: block;
 }
 
 
@@ -105,7 +105,7 @@ h2, .single_place h1, .article h1, h1.not_found,  .video h3,
     background-color: rgba(247, 249, 251, 0.94);
     position: fixed;
     z-index: 4;
-    /* display: none; */
+    display: none;
 }
 .place{
     /*background-color: beige;*/
